@@ -2135,6 +2135,9 @@ http://midibox.org/forums/topic/13137-midibox-seq-v4-release-feedback/?p=169705
 Send Note Off instead of Note On with velocity 0
 http://midibox.org/forums/topic/19471-note-off-hex-80/?p=169684
 ----------------------------------------------------------
+Global Groove Pattern:
+http://midibox.org/forums/topic/19622-global-groove/
+----------------------------------------------------------
 
 
 Wishlist for MIDIbox SEQ V4 Plus
